--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Jonathan Rise</title>
-    <meta content="My Portfolio" name="title" />
+    <meta content="My Portfolio" name="title">
     <meta
       name="description"
       content="Here you can see my work and learn more about me>
